--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	<option>Temas De Álgebra Elemental</option> 
 	<option value="AlgebraElemental/Ecuacion lineal.html">Ecuación lineal</option> 
 	<option value="AlgebraElemental/Inecuacion lineal.html">Inecuación lineal</option> 
-	<option value="AlgebraElemental/Inecuación con valor absoluto.html">Inecuación con valor absoluto</option> 
+	<option value="AlgebraElemental/Inecuación con valor absoluto.html">Ecuación con valor absoluto</option> 
 	<option value="AlgebraElemental/Ecuación cuadrática con solucion real.html">Ecuación cuadrática con solucion real</option> 
 	<option value="AlgebraElemental/Ecuación cuadrática con solución compleja.html">Ecuación cuadrática con solución compleja</option> 
 	<option value="AlgebraElemental/Sistema de dos ecuaciones con dos incógnitas (2x2).html">Sistema de dos ecuaciones con dos incógnitas (2x2)</option> 
