Update Inecuación con valor absoluto.html

--- a/AlgebraElemental/Inecuación con valor absoluto.html
+++ b/AlgebraElemental/Inecuación con valor absoluto.html
@@ -10,7 +10,7 @@
     <meta name="description" content="#">
     <meta name="keywords" content="#">
     <!-- Page Title -->
-    <title>Inecuación conn valor absoluto</title>
+    <title>Ecuación con valor absoluto</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="shortcut icon" href="../images/logo-geogebra.png" />
@@ -29,7 +29,7 @@
 
      <div class="titulo-videos">
          <br><br><br><br>
-         <h1 class="animated pulse infinite">Ejercicio de inecuación conn valor absoluto</h1>
+         <h1 class="animated pulse infinite">Ejercicio de ecuación con valor absoluto</h1>
      </div><br><br><br>
      <div class="contenedor-videos">
         <iframe width="355" height="315" src="....." frameborder="0" 
