--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <select class="cuadro" name="forma" onchange="location = this.options[this.selectedIndex].value;"> 
 	<option>Temas De Álgebra Elemental</option> 
 	<option value="AlgebraElemental/Ecuacion lineal.html">Ecuación lineal</option> 
-	<option value="AlgebraElemental/Inecuacion lineal.html">Inecuación lineal</option> 
+	<option value="AlgebraElemental/Inecuacion lineal.html">Ecuación lineal</option> 
 	<option value="AlgebraElemental/Inecuación con valor absoluto.html">Ecuación con valor absoluto</option> 
 	<option value="AlgebraElemental/Ecuación cuadrática con solucion real.html">Ecuación cuadrática con solucion real</option> 
 	<option value="AlgebraElemental/Ecuación cuadrática con solución compleja.html">Ecuación cuadrática con solución compleja</option> 
