--- a/AlgebraElemental/Inecuacion lineal.html
+++ b/AlgebraElemental/Inecuacion lineal.html
@@ -29,7 +29,7 @@
 
      <div class="titulo-videos">
          <br><br><br><br>
-         <h1 class="animated pulse infinite">Ejercicio de inecuación lineal</h1>
+         <h1 class="animated pulse infinite">Ejercicio de ecuación lineal</h1>
      </div><br><br><br>
      <div class="contenedor-videos">
         <iframe width="355" height="315" src="....." frameborder="0" 
