--- a/IntegralDefinida/Área bajo la curva.html
+++ b/IntegralDefinida/Área bajo la curva.html
@@ -32,7 +32,7 @@
          <h1 class="animated pulse infinite">Ejercicio de área bajo la curva</h1>
      </div><br><br><br>
      <div class="contenedor-videos">
-        <iframe width="355" height="315" src="....." frameborder="0" 
+        <iframe width="355" height="315" src="https://www.youtube.com/embed/6_D_Z4qeIhA" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe><br><br>
      </div>
