--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
 <select class="cuadro" name="forma" onchange="location = this.options[this.selectedIndex].value;"> 
 	<option>Temas De Funciones</option> 
+	<option value="Funciones/Límites.html">Límites</option> 
 	<option value="Funciones/Gráfica de funciones.html">Gráfica de funciones</option> 
 	<option value="Funciones/Dominio y rango de uan función.html">Dominio y rango de una función</option> 
 	<option value="Funciones/Límites de funciones.html">Límites de funciones</option> 
