--- a/Funciones/Límites.html
+++ b/Funciones/Límites.html
@@ -29,7 +29,7 @@
 
      <div class="titulo-videos">
          <br><br><br><br>
-         <h1 class="animated pulse infinite">Ejercicio</h1>
+         <h1 class="animated pulse infinite">Ejercicio de límites</h1>
      </div><br><br><br>
      <div class="contenedor-videos">
         <iframe width="355" height="315" src="https://www.youtube.com/embed/MQgu7rcUy8Q" frameborder="0" 
