--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                                 <div class="slider-content_wrap">
                                     <h1 class="animated pulse infinite">Utilería Matemática</h1>
                                      &nbsp;
-                                  <!--  <div class="imagen-mate">
+                                    <div class="imagen-mate">
                                         <img class="animated pulse infinite" src="images/raiz-cuadrada.png" width="16%" alt="imagen del matematicas">
                                     </div>
-                                    -->   
+                                     
                                 </div>
                                 </div>
                             </div>
